# DataAcquisitionTests

./: .gitmodules  CMakeLists.txt  DataAcquisitionTests copy.cpp
adc_test/: CMakeLists.txt  adc_test.cpp
combined_test/: CMakeLists.txt  adc_test.c  adc_test.h  combined_test.c  mux_test.c  mux_test.h  one_wire_mux_test.cpp  one_wire_mux_test.h  w5x00_spi.c  web_page.h
control_test/: CMakeLists.txt  control_test.cpp
ethernet_test/: CMakeLists.txt  SPI Setup.pvs  http_server.c  web_page.h
i2c_test/: CMakeLists.txt  i2c_test.c
libraries/: CMakeLists.txt
mux_test/: CMakeLists.txt  mux_test.c
one_wire_mux_test/: CMakeLists.txt  one_wire_mux_test.cpp
one_wire_test/: CMakeLists.txt  one_wire_test.cpp
port/: CMakeLists.txt
sd_test/: CMakeLists.txt  hw_config.c  sd_test.cpp
